--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,7 @@ jobs:
       run: |
         if docker images | grep -q hhgttg-test; then
           echo "==> Running tests in Docker container"
-          docker run -ti --rm hhgttg-test
+          docker run --rm hhgttg-test
         else
           echo "Docker image not available, skipping Docker tests"
         fi
@@ -102,7 +102,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04, ubuntu-22.04, ubuntu-24.04, macos-latest]
+        os: [ubuntu-latest, ubuntu-22.04, ubuntu-24.04, macos-latest]
         
     steps:
     - name: Checkout repository
