--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,13 +17,33 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Set up Bash ${{ matrix.bash-version }}
+    - name: Install Bash ${{ matrix.bash-version }}
       run: |
-        if [ "${{ matrix.bash-version }}" != "latest" ]; then
-          # Install specific bash version if not latest
-          echo "Using system bash (latest available)"
+        # If "latest" → use system bash
+        if [ "${{ matrix.bash-version }}" = "latest" ]; then
+          echo "Using system default Bash:"
+          bash --version
+          exit 0
         fi
-        bash --version
+
+        sudo apt-get update
+        sudo apt-get install -y build-essential wget
+
+        echo "Downloading Bash ${{ matrix.bash-version }}..."
+        wget https://ftp.gnu.org/gnu/bash/bash-${{ matrix.bash-version }}.tar.gz
+        tar -xzf bash-${{ matrix.bash-version }}.tar.gz
+        cd bash-${{ matrix.bash-version }}
+
+        echo "Compiling Bash..."
+        ./configure --prefix=/usr/local/bash-${{ matrix.bash-version }}
+        make
+        sudo make install
+
+        # Replace system bash temporarily
+        sudo ln -sf /usr/local/bash-${{ matrix.bash-version }}/bin/bash /usr/local/bin/bash
+
+        echo "Installed Bash version:"
+        /usr/local/bin/bash --version
         
     - name: Install system dependencies
       run: |
